--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1643,6 +1643,7 @@ body {
     height: 338px;
     background: #1E212C;
     padding: 80px 0 60px;
+    color: white;
 
 }
 
@@ -1664,7 +1665,6 @@ body {
 .footer__paragraph {
     width: 276px;
     height: 90px;
-    color: #FFF;
     font-size: 12px;
     font-weight: 400;
     line-height: 150%;
@@ -1674,22 +1674,10 @@ body {
 
 
 
-.footer__icons {
-    color: #1E212C;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 150%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
 
-.footer__icons p {
-    margin-bottom: 24px;
-}
 
 .footer__icons-box {
     display: flex;
-    align-items: center;
 }
 
 .footer__icons-box-item {
@@ -1703,6 +1691,19 @@ body {
 
 .footer__links {
     display: flex;
+
+}
+
+
+.footer__links a {
+    opacity: 0.6;
+
+}
+
+.footer__links a:hover {
+    transition: all .3s;
+    opacity: 1;
+
 }
 
 .footer__site-map {
@@ -1717,9 +1718,8 @@ body {
     margin-right: 80px;
 }
 
-.footer__links span {
+.footer__links H2 {
     display: block;
-    color: #FFF;
     font-size: 16px;
     font-weight: 700;
     line-height: 150%;
@@ -1728,61 +1728,45 @@ body {
     margin-bottom: 12px;
 }
 
-.footer__links a:hover {
-    color: white;
-    transition: all .3s;
+.footer__contacts-items span {}
+
+.footer__contacts-item {
+    display: inline-block;
 
 }
 
-.footer__contacts-phone {
-    position: relative;
-    padding-left: 24px;
-}
-
-
-
-.footer__contacts-phone::before {
-
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 8px;
-    transform: translate(-50%, -50%);
-    width: 16px;
-    height: 16px;
-    background: url("../images/icons/phone-icon-mini.svg") 0 0 / 100% no-repeat;
-    opacity: 0.6;
-    color: red;
-}
-
-
-
-.footer__contacts-phone:hover::before svg{
-    fill: white;
-    transition: all .3s;
-}
-
-
-.footer__contacts-mail {
-    position: relative;
-    padding-left: 24px;
-}
-
-.footer__contacts-mail::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 8px;
-    transform: translate(-50%, -50%);
-    width: 16px;
-    height: 16px;
-    background: url("../images/icons/mail-icon.svg") 0 0 / 100% no-repeat;
+.footer__contacts-item svg {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 8px;
     opacity: 0.6;
 }
 
-
-.footer__contacts-mail::before:hover {
-    color: white;
-    transition: all .3s;
-
+.footer__sign {
+    width: 286px;
 }
+
+.footer__sign p {
+    width: 280px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.footer__sign H2 {
+    margin-bottom: 24px;
+}
+
+.footer__field {
+    width: 286px;
+    height: 36px;
+    border-radius: 4px;
+    padding: 9px 12px;
+    border: 1px solid rgba(255, 255, 255, 0.20);
+    background: rgba(255, 255, 255, 0.12);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 12px;
+}
+
