start writing media

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1856,3 +1856,13 @@ scale: 1.5;
     height: 16px;
     cursor: pointer;
 }
+
+
+
+/* -------------------END FOOTER ---------------------------- */
+
+
+
+/* ---------------------MEDIA-------------------------------- */
+
+
