--- a/css/style.css
+++ b/css/style.css
@@ -1908,22 +1908,25 @@ footer {
         position: fixed;
         top: 0;
         bottom: 0;
-        right: 0;
+        right: 0px;
         background-color: white;
         z-index: 100;
         min-width: 320px;
+        transition: all .3s;
         transform: translateX(100%);
+
     }
 
-    .header__top--open {
+    .header__top--open .header__top {
         transform: translateX(0%);
+        right: 0;
     }
 
     .header__top-inner {
         flex-direction: column;
         height: 100%;
         justify-content: space-between;
-        padding: 100px 0;
+        padding: 100px;
 
     }
 
