--- a/css/style.css
+++ b/css/style.css
@@ -1872,11 +1872,27 @@ footer {
 
 @media (max-width: 1100px) {
     .burger {
-        display: block;
         position: fixed;
-        top: 30px;
-        right: 15px;
+        top: 0;
+        right: 0;
         z-index: 150;
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: all .3s;
+
+    }
+
+    .burger--follow {
+        top: 15px;
+        right: 15px;
+        box-shadow: 0 1px 8px #a1a1a1;
+        background-color: white;
+
     }
 
     .burger span {
@@ -1919,7 +1935,7 @@ footer {
 
     .header__top--open .header__top {
         transform: translateX(0%);
-       
+
     }
 
     .header__top-inner {
