--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,24 @@ body {
     height: 100%;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.349);
+    z-index: 50;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s;
+}
+
+.overlay--show{
+    visibility: visible;
+    opacity: 1;
+}
+
 .burger {
     display: none;
 }
@@ -1947,17 +1965,20 @@ footer {
     }
 
     .header__logo {
-        margin: 0;
+        margin: 0 0 30px 0;
     }
 
     .header__nav {
         text-align: center;
         margin: 0 auto;
+        flex-grow: 1;
 
     }
 
     .header__nav-list {
         flex-direction: column;
+        justify-content: center;
+        height: 100%;
     }
 
     .header__nav-item {
@@ -1966,7 +1987,7 @@ footer {
 
     .header__nav-link {
         display: block;
-        padding: 30px;
+        padding: 10px;
 
     }
 
@@ -1983,5 +2004,21 @@ footer {
         margin-bottom: 30px;
     }
 
+
+}
+
+
+
+@media (max-width: 400px) {
+
+
+.header__top {
+    min-width: none;
+    left: 0;
+  
+    
+    
+
+}
 
 }
