--- a/css/style.css
+++ b/css/style.css
@@ -1886,7 +1886,7 @@ footer {
 
 
 /* ---------------------MEDIA-------------------------------- */
-
+/* ---------------------1100---------------------------------- */
 
 @media (max-width: 1100px) {
     .burger {
@@ -1934,11 +1934,14 @@ footer {
     .burger--close::before {
         width: 22px;
         transform: translateY(100%) rotate(-45deg);
+        transition: all .1s;
             }
 
      .burger--close::after {
         width: 22px;
-        transform: translateY(-250%) rotate(45deg);      
+        transform: translateY(-250%) rotate(45deg); 
+        transition: all .1s;
+
     }
 
     .burger--follow {
@@ -1966,14 +1969,10 @@ footer {
 
     }
 
-
-
     .header__top.header__top--open {
         transform: translateX(0%);
 
     }
-
-
 
     .header__top-inner {
         flex-direction: column;
@@ -2025,8 +2024,14 @@ footer {
 
 
 }
+/* ---------------------MEDIA-------------------------------- */
 
 
+
+
+
+
+/* ---------------------400---------------------------------- */
 
 @media (max-width: 400px) {
 
@@ -2034,9 +2039,6 @@ footer {
     .header__top {
         min-width: none;
         left: 0;
-
-
-
     }
 
 }
