--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,13 @@ footer {
 
 .sert__logos {
     display: flex;
+
+}
+
+.sert__logos img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .sert__logos-item {
@@ -742,6 +749,13 @@ footer {
 
 .sert__image-box {
     box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.10), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
+
+}
+
+.sert__image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 
 }
 
@@ -2052,6 +2066,30 @@ footer {
     }
 
 
+    /* ----------------------------------- */
+    .cert__heading {
+        text-align: center;
+    }
+
+    .sert__text {
+        text-align: center;
+
+    }
+
+    .sert__inner {
+        flex-direction: column;
+        align-items: center;
+        margin: 0 15px 0 15px;
+
+    }
+
+    .sert__content {
+        margin-bottom: 40px;
+    }
+
+    .sert__image-box {
+        max-width: 600px;
+    }
 
 }
 
@@ -2091,7 +2129,7 @@ footer {
     /* ----------------------------------- */
 
 
-   
+
     .directions__filter-item {
         margin-right: 10px;
     }
@@ -2175,11 +2213,18 @@ footer {
         font-size: 40px;
     }
 
-   /* ----------------------------------- */
+    /* ----------------------------------- */
 
-      .directions__list {
+    .directions__list {
         grid-template: none;
-        
+
+    }
+
+    /* ----------------------------------- */
+    .sert__logos {
+        /* flex-direction: column;
+        align-items: center; */
+
     }
 
 
@@ -2231,13 +2276,12 @@ footer {
         margin-bottom: 15px;
     }
 
+    .directions__list-item--empty {
+        height: 150px;
 
-   
+
+    }
+
+
+
 }
-
-
-
-
-
-
-
