--- a/css/style.css
+++ b/css/style.css
@@ -851,6 +851,7 @@ footer {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
 }
 
 .team__image {
@@ -2092,6 +2093,15 @@ footer {
         max-width: 600px;
     }
 
+
+     /* ----------------------------------- */
+
+     .team__image-box {
+        max-width: 280px;
+       
+  
+      }
+
 }
 
 
@@ -2167,6 +2177,9 @@ footer {
         grid-template-rows: repeat(3, 1fr);
     }
 
+    /* ----------------------------------- */
+
+  
 }
 
 
@@ -2221,12 +2234,23 @@ footer {
 
     }
 
-    /* ----------------------------------- */
-    .sert__logos {
-        /* flex-direction: column;
-        align-items: center; */
+       /* ----------------------------------- */
 
-    }
+       .team__image-box {
+        max-width: 280px;
+        margin: 30px auto;
+  
+      }
+  
+      .team__slider-arrows{
+          display: none;
+      }
+      
+  
+
+    
+
+  
 
 
 }
@@ -2280,6 +2304,19 @@ footer {
     .directions__list-item--empty {
         height: 150px;
     }
+
+    /* ----------------------------------- */
+
+    .team__image-box {
+      max-width: 250px;
+      margin: 30px auto;
+
+    }
+
+    .team__slider-arrows{
+        display: none;
+    }
+    
 
 
 
