--- a/css/style.css
+++ b/css/style.css
@@ -1154,9 +1154,9 @@ footer {
 .companies__logos-box {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 8.1%;
-    grid-row-gap: 40px;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+    gap: 40px 8.1%;
     padding: 60px 0 144px 0;
     position: relative;
 
@@ -1173,11 +1173,14 @@ footer {
     height: 90px;
 }
 
+
+
+
 .companies__logos-box img {
-    filter: rgb(128, 128, 128);
-    /* IE5+ */
+    width: 100%;
+    height: 100%;
+      filter: rgb(128, 128, 128);
     -webkit-filter: grayscale(1);
-    /* Webkit Nightlies & Chrome Canary */
     -webkit-transition: all .3s ease-in-out;
     opacity: .4;
 }
@@ -2193,6 +2196,19 @@ footer {
     .directions__link-content {
         padding: 24px 5px 5px;
     }
+
+    /* ----------------------------------- */
+
+    .companies__logos-box {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, auto);
+        gap: 40px 8.1%;
+        padding: 60px 0 144px 0;
+        position: relative;
+    }
+
+
 }
 
 /* ---------------------700---------------------------------- */
@@ -2219,11 +2235,11 @@ footer {
     }
 
     /* ----------------------------------- */
-    .testimonials__slider-wrapper{
+    .testimonials__slider-wrapper {
         padding: 0;
     }
 
-    .testimonials__slide{
+    .testimonials__slide {
         padding: 30px 15px;
     }
 
@@ -2296,44 +2312,57 @@ footer {
         display: none;
     }
 
-     /* ----------------------------------- */
-     .team__dots button {
+    /* ----------------------------------- */
+    .team__dots button {
         display: flex;
         padding-top: 50px;
         width: 20px;
 
     }
 
-    .main__testiomonials{
+    .main__testiomonials {
         margin-top: -20px;
     }
 
-       /* ----------------------------------- */
-       .testimonials__slider-wrapper{
-       margin-bottom: 30px;
+    /* ----------------------------------- */
+    .testimonials__slider-wrapper {
+        margin-bottom: 30px;
     }
 
-    .testimonials__slide-inner{
+    .testimonials__slide-inner {
         padding-left: 15px;
     }
 
     .testimonials__dots button {
         width: 20px;
-        
+
     }
 
 
 
-    .testimonials__quote{
+    .testimonials__quote {
         font-size: inherit;
         line-height: inherit;
     }
 
-    .testimonials__quote::before{
+    .testimonials__quote::before {
         left: -30px;
         width: 20px;
     }
-    
+
+
+       /* ----------------------------------- */
+
+       .companies__logos-box {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
+        gap: 40px 8.1%;
+        padding: 30px 0 80px 0;
+        position: relative;
+    }
+
+
 
 
 
@@ -2402,8 +2431,20 @@ footer {
         display: none;
     }
 
+         /* ----------------------------------- */
 
-   
+         .companies__logos-box {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(5, auto);
+            gap: 40px 8.1%;
+            padding: 20px 0 60px 0;
+            position: relative;
+        }
+    
+
+
+
 
 
 
