--- a/css/style.css
+++ b/css/style.css
@@ -1179,7 +1179,7 @@ footer {
 .companies__logos-box img {
     width: 100%;
     height: 100%;
-      filter: rgb(128, 128, 128);
+    filter: rgb(128, 128, 128);
     -webkit-filter: grayscale(1);
     -webkit-transition: all .3s ease-in-out;
     opacity: .4;
@@ -2351,15 +2351,21 @@ footer {
     }
 
 
-       /* ----------------------------------- */
+    /* ----------------------------------- */
 
-       .companies__logos-box {
+    .companies__logos-box {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, auto);
         gap: 40px 8.1%;
         padding: 30px 0 80px 0;
         position: relative;
+    }
+
+    .companies__logos-box img {
+        filter: none;
+        -webkit-filter: grayscale(0);
+        opacity: 1;
     }
 
 
@@ -2431,17 +2437,23 @@ footer {
         display: none;
     }
 
-         /* ----------------------------------- */
+    /* ----------------------------------- */
 
-         .companies__logos-box {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(5, auto);
-            gap: 40px 8.1%;
-            padding: 20px 0 60px 0;
-            position: relative;
-        }
-    
+    .companies__logos-box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, auto);
+        gap: 40px 8.1%;
+        padding: 20px 0 60px 0;
+        position: relative;
+    }
+
+    .companies__logos-box img {
+        filter: none;
+        -webkit-filter: grayscale(0);
+        opacity: 1;
+    }
+
 
 
 
