--- a/css/style.css
+++ b/css/style.css
@@ -1213,6 +1213,9 @@ footer {
 
 }
 
+.accordion{
+    margin-right: 40px;
+}
 
 .accordion__item {
     max-width: 600px;
@@ -1227,6 +1230,7 @@ footer {
     position: relative;
     margin-bottom: 24px;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .accordion__header p {
@@ -1236,6 +1240,8 @@ footer {
     font-weight: 700;
     line-height: 150%;
     cursor: pointer;
+    white-space: wrap;
+
 }
 
 
@@ -1248,6 +1254,7 @@ footer {
     transform: translate(-50%, -50%);
     width: 20px;
     height: 20px;
+
 }
 
 .accordion__item_show .accordion__header::after {
@@ -2146,6 +2153,17 @@ footer {
 
     }
 
+     /* ----------------------------------- */
+
+    .program__image-box {
+        min-width: 400px;
+    }
+
+    .program__image-box img{
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
 
@@ -2208,6 +2226,14 @@ footer {
         position: relative;
     }
 
+     /* ----------------------------------- */
+
+     .program__image-box {
+        display: none;
+    }
+
+
+ 
 
 }
 
@@ -2247,6 +2273,7 @@ footer {
         display: none;
     }
 
+    
 
 }
 
