--- a/css/style.css
+++ b/css/style.css
@@ -715,6 +715,7 @@ footer {
     max-width: 400px;
 }
 
+
 .cert__heading {
     margin-bottom: 50px;
 }
@@ -748,7 +749,8 @@ footer {
 
 .sert__image-box {
     box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.10), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
-
+margin-bottom: -46px;
+z-index: 2;
 }
 
 .sert__image-box img {
