--- a/css/style.css
+++ b/css/style.css
@@ -1625,31 +1625,44 @@ footer {
 
 .form__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+  
 }
 
 .form__image-box {
-    padding-right: 30px;
-
+   
+    min-width: 340px;
+    
 }
+
+.form__image-box img{
+    width: 100%;
+    height: 100%;
+    }
+
+
 
 .form__input {
     padding-top: 40px;
-    max-width: 705px;
+    max-width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-end;
+
 }
 
 .form__item {
     display: flex;
     flex-direction: column;
     margin-bottom: 24px;
+   
 }
 
 
 .form__item-input {
-    width: 340px;
+    /* width: 340px; */
+    
     height: 52px;
     border-radius: 4px;
     border: 1px solid #D7DADD;
@@ -2396,7 +2409,26 @@ footer {
         height: 200px;
     }
 
+    /* ----------------------------------- */
+
+    .form__image-box {
+       display: none;
+    
+    }
+
 }
+
+/* ---------------------750---------------------------------- */
+
+@media (max-width: 750px) {}
+
+
+.form__input{
+    flex-wrap: wrap;
+
+}
+
+
 
 /* ---------------------850---------------------------------- */
 
