--- a/css/style.css
+++ b/css/style.css
@@ -1630,6 +1630,16 @@ footer {
   
 }
 
+.form__heading {
+    margin-bottom: 40px;
+
+}
+
+
+.form__wrapper{
+    margin-left: 30px;
+}
+
 .form__image-box {
    
     min-width: 340px;
@@ -1644,26 +1654,22 @@ footer {
 
 
 .form__input {
-    padding-top: 40px;
-    max-width: 100%;
+    /* padding-top: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    max-width: 705px; */
 
 }
 
 .form__item {
     display: flex;
-    flex-direction: column;
-    margin-bottom: 24px;
+   margin-bottom: 24px;
    
 }
 
 
 .form__item-input {
-    /* width: 340px; */
-    
-    height: 52px;
     border-radius: 4px;
     border: 1px solid #D7DADD;
     background: #FFF;
@@ -1671,6 +1677,7 @@ footer {
     font-weight: 400;
     line-height: 160%;
     color: #9A9CA5;
+    margin-top: 8px;
 
 }
 
@@ -1679,21 +1686,28 @@ footer {
     font-size: 16px;
     font-weight: 400;
     line-height: 160%;
-    margin-bottom: 8px;
+    margin-right: 25px;
+    flex: 1 1 auto;
+   
 }
 
-.form__item:nth-child(-2n+3) {
-    margin-right: 20px;
+.form__item-label:last-child {
+margin-right: 0;
+}
+
+
+.form__item-text{
+    display: block;
+     /* width: 705px; */
+    /* height: 128px; */
 }
 
 .form__input-message {
-    resize: none;
-    width: 705px;
-    height: 128px;
+    resize: none; 
     border-radius: 4px;
     border: 1px solid #D7DADD;
     background: #FFF;
-    padding: 13px 218px 13px 16px;
+    /* padding: 13px 218px 13px 16px; */
     font-weight: 400;
     line-height: 160%;
     color: #9A9CA5;
