--- a/css/style.css
+++ b/css/style.css
@@ -1627,7 +1627,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  
+
 }
 
 .form__heading {
@@ -1636,48 +1636,25 @@ footer {
 }
 
 
-.form__wrapper{
+.form__wrapper {
     margin-left: 30px;
 }
 
 .form__image-box {
-   
+
     min-width: 340px;
-    
+
 }
 
-.form__image-box img{
+.form__image-box img {
     width: 100%;
     height: 100%;
-    }
-
-
-
-.form__input {
-    /* padding-top: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    max-width: 705px; */
-
 }
+
 
 .form__item {
     display: flex;
-   margin-bottom: 24px;
-   
-}
-
-
-.form__item-input {
-    border-radius: 4px;
-    border: 1px solid #D7DADD;
-    background: #FFF;
-    padding: 13px 205px 13px 16px;
-    font-weight: 400;
-    line-height: 160%;
-    color: #9A9CA5;
-    margin-top: 8px;
+    margin-bottom: 24px;
 
 }
 
@@ -1688,29 +1665,49 @@ footer {
     line-height: 160%;
     margin-right: 25px;
     flex: 1 1 auto;
-   
-}
 
-.form__item-label:last-child {
-margin-right: 0;
 }
 
 
-.form__item-text{
-    display: block;
-     /* width: 705px; */
-    /* height: 128px; */
-}
-
-.form__input-message {
-    resize: none; 
+.form__item-input {
     border-radius: 4px;
     border: 1px solid #D7DADD;
     background: #FFF;
-    /* padding: 13px 218px 13px 16px; */
+    padding: 13px 16px;
+    width: 100%;
     font-weight: 400;
     line-height: 160%;
     color: #9A9CA5;
+    margin-top: 8px;
+
+}
+
+
+
+.form__item-label:last-child {
+    margin-right: 0;
+}
+
+.form__item-label-message {
+    display: block;
+    margin-bottom: 50px;
+}
+
+
+.form__input-message {
+    display: block;
+    resize: none;
+    border-radius: 4px;
+    border: 1px solid #D7DADD;
+    background: #FFF;
+    font-weight: 400;
+    line-height: 160%;
+    color: #9A9CA5;
+    height: 128px;
+    width: 100%;
+    padding: 13px 16px;
+    margin-top: 8px;
+
 
 }
 
@@ -2426,8 +2423,8 @@ margin-right: 0;
     /* ----------------------------------- */
 
     .form__image-box {
-       display: none;
-    
+        display: none;
+
     }
 
 }
@@ -2437,7 +2434,7 @@ margin-right: 0;
 @media (max-width: 750px) {}
 
 
-.form__input{
+.form__input {
     flex-wrap: wrap;
 
 }
